Fix spacing problem (appears when adding reCAPTCHA)

--- a/app/assets/stylesheets/register.scss
+++ b/app/assets/stylesheets/register.scss
@@ -80,6 +80,7 @@
     font-size: 12px;
     font-weight: 400;
     margin-bottom: 0;
+    margin-top: 14px;
 }
 
 .register-button{
@@ -99,5 +100,6 @@
     cursor: pointer;
 }
 #user_register_mail_list{
+    margin-top: 14px;
     accent-color: #8E8E8E;
 }
